parser/src/snapshots/parser__java__tests__everything.snap
---
source: parser/src/java.rs
expression: result.unwrap()
snapshot_kind: text
---
Class {
    class_path: "ch.emilycares.Everything",
    source: "",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Everything",
    methods: [
        Method {
            access: [
                Public,
            ],
            name: "method",
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: [
                Public,
            ],
            name: "public_method",
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: [
                Private,
            ],
            name: "private_method",
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: [
                Public,
            ],
            name: "out",
            parameters: [],
            throws: [],
            ret: Int,
            source: None,
        },
        Method {
            access: [
                Public,
            ],
            name: "add",
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
                Parameter {
                    name: Some(
                        "b",
                    ),
                    jtype: Int,
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
        Method {
            access: [
                Static,
                Public,
            ],
            name: "sadd",
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
                Parameter {
                    name: Some(
                        "b",
                    ),
                    jtype: Int,
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
    ],
    fields: [
        Field {
            access: [
                Public,
            ],
            name: "noprop",
            jtype: Int,
            source: None,
        },
        Field {
            access: [
                Public,
            ],
            name: "publicproperty",
            jtype: Int,
            source: None,
        },
        Field {
            access: [
                Private,
            ],
            name: "privateproperty",
            jtype: Int,
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
