parser/src/snapshots/parser__java__tests__generic_type_declare.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Test",
    source: "/path/to/source/Test.java",
    access: [],
    imports: [
        Package(
            "a.test",
        ),
    ],
    name: "Test",
    methods: [
        Method {
            access: [
                Static,
                Public,
            ],
            name: "add",
            parameters: [
                Parameter {
                    name: Some(
                        "list",
                    ),
                    jtype: Generic(
                        "Collection",
                        [
                            Parameter(
                                "T",
                            ),
                        ],
                    ),
                },
                Parameter {
                    name: Some(
                        "item",
                    ),
                    jtype: Parameter(
                        "T",
                    ),
                },
            ],
            throws: [],
            ret: Int,
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
