parser/src/snapshots/parser__java__tests__interface_constants.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Constants",
    source: "/path/to/source/ch/emilycares/Constants.java",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "jdk.net.Sockets",
        ),
        Class(
            "java.io.IOException",
        ),
        Class(
            "java.net.Socket",
        ),
    ],
    name: "Constants",
    methods: [
        Method {
            access: [
                Public,
            ],
            name: "display",
            parameters: [],
            throws: [],
            ret: Void,
            source: None,
        },
        Method {
            access: [
                Public,
            ],
            name: "createSocket",
            parameters: [
                Parameter {
                    name: Some(
                        "hostname",
                    ),
                    jtype: Class(
                        "String",
                    ),
                },
                Parameter {
                    name: Some(
                        "port",
                    ),
                    jtype: Int,
                },
            ],
            throws: [
                Class(
                    "IOException",
                ),
            ],
            ret: Class(
                "Socket",
            ),
            source: None,
        },
    ],
    fields: [
        Field {
            access: [
                Public,
            ],
            name: "CONSTANT_A",
            jtype: Class(
                "String",
            ),
            source: None,
        },
        Field {
            access: [
                Public,
            ],
            name: "CONSTANT_B",
            jtype: Class(
                "String",
            ),
            source: None,
        },
        Field {
            access: [
                Public,
            ],
            name: "CONSTANT_C",
            jtype: Class(
                "String",
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
