parser/src/snapshots/parser__java__tests__jannotation.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Annotation",
    source: "/path/to/source/ch/emilycares/Annotation.java",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Annotation",
    methods: [],
    fields: [
        Field {
            access: [],
            name: "value",
            jtype: Int,
            source: None,
        },
        Field {
            access: [],
            name: "text",
            jtype: Class(
                "String",
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
