parser/src/snapshots/parser__java__tests__jenum.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Variants",
    source: "/path/to/source/ch/emilycares/Variants.java",
    access: Access(
        0x0,
    ),
    imports: [
        Package(
            "ch.emilycares",
        ),
    ],
    name: "Variants",
    methods: [
        Method {
            access: Access(
                Public,
            ),
            name: "getTag",
            parameters: [],
            throws: [],
            ret: Class(
                "String",
            ),
            source: None,
        },
    ],
    fields: [
        Field {
            access: Access(
                Private,
            ),
            name: "tag",
            jtype: Class(
                "String",
            ),
            source: None,
        },
    ],
    super_class: None,
    super_interfaces: [],
}
