parser/src/snapshots/parser__java__tests__super_class.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "a.test.Test",
    source: "/path/to/source/Test.java",
    access: [],
    imports: [
        Package(
            "a.test",
        ),
    ],
    name: "Test",
    methods: [],
    fields: [],
    super_class: Name(
        "a",
    ),
    super_interfaces: [],
}
