parser/src/snapshots/parser__java__tests__super_interfaces.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.SuperInterface",
    source: "",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.util.Collection",
        ),
        Class(
            "java.util.List",
        ),
        Class(
            "java.util.stream.Stream",
        ),
        Class(
            "java.util.stream.StreamSupport",
        ),
    ],
    name: "SuperInterface",
    methods: [
        Method {
            access: [
                Public,
            ],
            name: "stream",
            parameters: [],
            throws: [],
            ret: Generic(
                "Stream",
                [
                    Class(
                        "E",
                    ),
                ],
            ),
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [
        ClassPath(
            "java.util.Collection",
        ),
        ClassPath(
            "java.util.List",
        ),
    ],
}
