parser/src/snapshots/parser__java__tests__thrower.snap
---
source: parser/src/java.rs
expression: result.unwrap()
---
Class {
    class_path: "ch.emilycares.Thrower",
    source: "/path/to/source/Thrower.java",
    access: [],
    imports: [
        Package(
            "ch.emilycares",
        ),
        Class(
            "java.io.IOException",
        ),
    ],
    name: "Thrower",
    methods: [
        Method {
            access: [
                Public,
            ],
            name: "ioThrower",
            parameters: [],
            throws: [
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
        Method {
            access: [
                Public,
            ],
            name: "ioThrower",
            parameters: [
                Parameter {
                    name: Some(
                        "a",
                    ),
                    jtype: Int,
                },
            ],
            throws: [
                Class(
                    "IOException",
                ),
                Class(
                    "IOException",
                ),
            ],
            ret: Void,
            source: None,
        },
    ],
    fields: [],
    super_class: None,
    super_interfaces: [],
}
